jkl-adding platform
